--- a/home/Explore/test 1.html
+++ b/home/Explore/test 1.html
@@ -34,7 +34,7 @@
         </div>
     	</a>
     	
-    	<a href="Catgry/categories/Anciant%20Cites/table.html">
+    	
         <div class="card">
             <div class="card-image2"></div>
             <div class="card-text">
@@ -81,6 +81,7 @@
                 </div>
             </div>
         </div>
+        <a href="Catgry/categories/Hikes/table.html">
         <div class="card">
             <div class="card-image4"></div>
             <div class="card-text">
@@ -103,6 +104,9 @@
                 </div>
             </div>
         </div>
+    </a>
+
+    <a href="Catgry/categories/Anciant%20Cites/table.html">
         <div class="card">
             <div class="card-image5"></div>
             <div class="card-text">
@@ -125,6 +129,7 @@
                 </div>
             </div>
         </div>
+    </a>
 </div>
 
 <!--section 2-->
