--- a/home/about us/plan your trip.html
+++ b/home/about us/plan your trip.html
@@ -75,8 +75,25 @@
         color:#E5E5E5;
         text-transform: capitalize;
         font-size: 14px;
-        left: 492px;
-        top: -76px;
+        left:203px;
+        top: -45px;
+    }
+
+    .laslable{
+        position: relative;
+         color:#E5E5E5;
+        text-transform: capitalize;
+        font-size: 14px;
+        left:175px;
+        top: -45px;
+    }
+
+    .company{
+        position: relative;
+        left:200px;
+        top: -37px;
+        line-height: 40px;
+        width: 532px;
         
     }
 </style>
