--- a/home/Explore/test 1.html
+++ b/home/Explore/test 1.html
@@ -58,7 +58,7 @@
             </div>
         </div>
     </a>
-    
+        <a href="Catgry/categories/tours/table.html">
         <div class="card">
             <div class="card-image3"></div>
             <div class="card-text">
@@ -81,6 +81,7 @@
                 </div>
             </div>
         </div>
+    </a>
         <a href="Catgry/categories/Hikes/table.html">
         <div class="card">
             <div class="card-image4"></div>
