--- a/home/index/Travel plan/travelplan.html
+++ b/home/index/Travel plan/travelplan.html
@@ -2,11 +2,19 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-       
-
-
-
-
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+        <link rel="stylesheet" type="text/css" href="js/bootstrap.js">
+        <link rel="stylesheet" type="trxt/css" href="travelplan.css">
+        <title>Plan your trip</title>
     </head>
+    <body>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-7"></div>
+                <div class="col-md-5"></div>
+
+            </div>
+        </div>
+    </body>
 </html>
  
