--- a/home/index/Travel plan/travelplan.html
+++ b/home/index/Travel plan/travelplan.html
@@ -10,7 +10,15 @@
     <body>
         <div class="container">
             <div class="row">
-                <div class="col-md-7"></div>
+                <div class="col-md-7">
+                    <h1 class="text-left">Get Travel Assisttance from Several ASTA Travel Advisors</h1>
+                    <p class="text-left">Maybe you need help with vaction planning,honeymmon travel, tour packages, europe trips quotes? whatever your need, we can help! not sure which travel adviisor.No worries
+                        Recevie multiple replies for from ASTA(American Society of Travel Advisor)travel advissors. you are in control. select how many advisors yu want to get replies form and long you want your request to be active. seriours request only, please.</p>
+                        
+
+
+                        
+                </div>
                 <div class="col-md-5"></div>
 
             </div>
