--- a/home/index/Travel plan/travelplan.html
+++ b/home/index/Travel plan/travelplan.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
         <link rel="stylesheet" type="text/css" href="js/bootstrap.js">
-        <link rel="stylesheet" type="trxt/css" href="plan.css">
+        <link rel="stylesheet" href="plan.css">
         <title>Plan your trip</title>
     </head>
     <body>
