--- a/home/index/Travel plan/travelplan.html
+++ b/home/index/Travel plan/travelplan.html
@@ -19,7 +19,26 @@
 
                         
                 </div>
-                <div class="col-md-5"></div>
+                <div class="col-md-5">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h3 class="text-left">Registration Form</h3>
+                        </div>
+                        <div class="col-md-6">
+                            <span class="glyphicon glyphicon-pencil"></span>
+                        </div>
+
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <label class="label col-md-2 control-label">E-mail</label>
+                        <div class="col-md-10">
+                            <input type="Email" class="form-control" name="Email" placeholder="Email" required>
+                        </div>
+                    </div>
+
+
+                </div>
 
             </div>
         </div>
