--- a/home/index/Travel plan/travelplan.html
+++ b/home/index/Travel plan/travelplan.html
@@ -31,9 +31,33 @@
                     </div>
                     <hr>
                     <div class="row">
-                        <label class="label col-md-2 control-label">E-mail</label>
+                        <label class="label col-md-2 control-label">First Name</label>
                         <div class="col-md-10">
-                            <input type="Email" class="form-control" name="Email" placeholder="Email" required>
+                            <input type="text" class="form-control" name="First Name" placeholder="First Name" required>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <label class="label col-md-2 control-label">Last Name</label>
+                        <div class="col-md-10">
+                            <input type="text" class="form-control" name="Last Name" placeholder="Last Name" required>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <label class="label col-md-2 control-label">Last Name</label>
+                        <div class="col-md-10">
+                            <input type="text" class="form-control" name="Last Name" placeholder="Last Name" required>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <label class="label col-md-2 control-label">Last Name</label>
+                        <div class="col-md-10">
+                            <input type="text" class="form-control" name="Last Name" placeholder="Last Name" required>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <label class="label col-md-2 control-label">Last Name</label>
+                        <div class="col-md-10">
+                            <input type="text" class="form-control" name="Last Name" placeholder="Last Name" required>
                         </div>
                     </div>
 
