--- a/home/index/Travel plan/travelplan.html
+++ b/home/index/Travel plan/travelplan.html
@@ -43,21 +43,28 @@
                         </div>
                     </div>
                     <div class="row">
-                        <label class="label col-md-2 control-label">Last Name</label>
+                        <label class="label col-md-2 control-label">Email</label>
                         <div class="col-md-10">
-                            <input type="text" class="form-control" name="Last Name" placeholder="Last Name" required>
+                            <input type="Email" class="form-control" name="Email" placeholder="Email" required>
                         </div>
                     </div>
                     <div class="row">
-                        <label class="label col-md-2 control-label">Last Name</label>
+                        <label class="label col-md-2 control-label">Area Code</label>
                         <div class="col-md-10">
-                            <input type="text" class="form-control" name="Last Name" placeholder="Last Name" required>
+                            <input type="text" class="form-control" name="Area Code" placeholder="Area Code" required>
                         </div>
                     </div>
                     <div class="row">
-                        <label class="label col-md-2 control-label">Last Name</label>
+                        <label class="label col-md-2 control-label">Contact Number</label>
                         <div class="col-md-10">
-                            <input type="text" class="form-control" name="Last Name" placeholder="Last Name" required>
+                            <input type="text" class="form-control" name="Contact Number" placeholder="Contact Number" required>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <label class="label col-md-2 control-label">Days Of Your Trip</label>
+                        <div class="col-md-10">
+                            <input type="ckeckbox" class="form-control" name="Days Of Your Trip" placeholder="Days Of Your Trip" required>
+                            
                         </div>
                     </div>
 
