--- a/home/index/agent/index.html
+++ b/home/index/agent/index.html
@@ -12,7 +12,7 @@
     </head>
     <body class="nav-fixed">
         <nav class="topnav navbar navbar-expand shadow navbar-light bg-white" id="sidenavAccordion">
-            <a class="navbar-brand d-none d-sm-block" href="index.html">Admin Panel</a><button class="btn btn-icon btn-transparent-dark order-1 order-lg-0 mr-lg-2" id="sidebarToggle" href="#"><i data-feather="menu"></i></button>
+            <a class="navbar-brand d-none d-sm-block" href="index.html">Travel Planner</a><button class="btn btn-icon btn-transparent-dark order-1 order-lg-0 mr-lg-2" id="sidebarToggle" href="#"><i data-feather="menu"></i></button>
             <ul class="navbar-nav align-items-center ml-auto">
                 
                 <!--User Registration + New Comment Notification-->
@@ -74,13 +74,13 @@
                         </h6>
 
                         <a class="dropdown-item dropdown-notifications-item" href="#"
-                            ><img class="dropdown-notifications-item-img" src="./assets/img/mdabarik.jpg" />
+                            ><img class="dropdown-notifications-item-img" src="./assets/img/final.jpg" />
                             <div class="dropdown-notifications-item-content">
                                 <div class="dropdown-notifications-item-content-text">
                                     Lorem ipsum dolor sit amet, consectetur adipisicing.
                                 </div>
                                 <div class="dropdown-notifications-item-content-details">
-                                    Md. A. Barik &#xB7; 58m
+                                    Prineth Fernando &#xB7; 58m
                                 </div>
                             </div>
                         </a>
@@ -93,16 +93,16 @@
                 <!--Message Notification-->
 
                 <li class="nav-item dropdown no-caret mr-3 dropdown-user">
-                    <a class="btn btn-icon btn-transparent-dark dropdown-toggle" id="navbarDropdownUserImage" href="javascript:void(0);" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img class="img-fluid" src="./assets/img/mdabarik.jpg"/></a>
+                    <a class="btn btn-icon btn-transparent-dark dropdown-toggle" id="navbarDropdownUserImage" href="javascript:void(0);" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img class="img-fluid" src="./assets/img/final.jpg"/></a>
                     <div class="dropdown-menu dropdown-menu-right border-0 shadow animated--fade-in-up" aria-labelledby="navbarDropdownUserImage">
                         <h6 class="dropdown-header d-flex align-items-center">
-                            <img class="dropdown-user-img" src="./assets/img/mdabarik.jpg" alt="Photo" />
+                            <img class="dropdown-user-img" src="./assets/img/final.jpg" alt="Photo" />
                             <div class="dropdown-user-details">
                                 <div class="dropdown-user-details-name">
-                                    Md. A. Barik
+                                    Prineth Fernando
                                 </div>
                                 <div class="dropdown-user-details-email">
-                                    mdabarik@gmail.com
+                                    prineth@gmail.com
                                 </div>
                             </div>
                         </h6>
@@ -175,7 +175,7 @@
                     <div class="sidenav-footer">
                         <div class="sidenav-footer-content">
                             <div class="sidenav-footer-subtitle">Logged in as:</div>
-                            <div class="sidenav-footer-title">Md. A. Barik</div>
+                            <div class="sidenav-footer-title">Prineth Fernando</div>
                         </div>
                     </div>
 
@@ -273,13 +273,13 @@
                                                 <td>1</td>
                                                 <td>
                                                     <a href="#">
-                                                        I Love You!
+                                                        Hello world
                                                     </a>
                                                 </td>
                                                 <td>Love</td>
                                                 <td>61</td>
                                                 <td>Photo</td>
-                                                <td>MD. A. Barik</td>
+                                                <td>Prineth Fernando</td>
                                                 <td>17 Nov 20</td>
                                             </tr>     
                                             <tr>
@@ -292,7 +292,7 @@
                                                 <td>Love</td>
                                                 <td>61</td>
                                                 <td>Photo</td>
-                                                <td>MD. A. Barik</td>
+                                                <td>Kamal</td>
                                                 <td>17 Nov 20</td>
                                             </tr>
                                             <tr>
@@ -305,7 +305,7 @@
                                                 <td>Love</td>
                                                 <td>61</td>
                                                 <td>Photo</td>
-                                                <td>MD. A. Barik</td>
+                                                <td>Mahinda Rajapaksa</td>
                                                 <td>17 Nov 20</td>
                                             </tr>     
                                         </tbody>
@@ -322,7 +322,7 @@
                 <footer class="footer mt-auto footer-light">
                     <div class="container-fluid">
                         <div class="row">
-                            <div class="col-md-6 small">Copyright &#xA9; TechBarik 2020</div>
+                            <div class="col-md-6 small">Copyright &#xA9; Travel Lanka 2020</div>
                             <div class="col-md-6 text-md-right small">
                                 <a href="#!">Privacy Policy</a>
                                 &#xB7;
