--- a/home/index/Travel Plan/plan.html
+++ b/home/index/Travel Plan/plan.html
@@ -3,7 +3,7 @@
     <title>Plan your trip</title>
     <head>
         <body>
-            <div class="travel form"><h1>Plan your trip</h1></div>
+            <div class="pakaya"><h1>Plan your trip</h1></div>
         </body>
     </head>
 </html>
