--- a/home/index/Travel Plan/plan.html
+++ b/home/index/Travel Plan/plan.html
@@ -38,6 +38,16 @@
                 </div>
                 <h2 class="name">Email address</h2>
                 <input class="email address" type="Email" name="email adress">
+
+                <h2 class="name">Contact number</h2>
+                <input class="code" type="text" name="area_code">
+                <label class="area-code">Area Code</label>
+
+                <input class="number" type="number" name="number">
+                <label class="phone-number">Contact number</label>
+
+
+
             </form>
         </div>
     </body>
