--- a/home/index/Travel Plan/plan.html
+++ b/home/index/Travel Plan/plan.html
@@ -47,6 +47,11 @@
                 <label class="phone-number">Contact number</label>
 
 
+                <h2 class="name">Days of your trip</h2>
+                <input class="days of your trip" type="number" name="days of your trip">
+                
+
+
 
             </form>
         </div>
