--- a/home/index/Travel Plan/plan.html
+++ b/home/index/Travel Plan/plan.html
@@ -26,7 +26,7 @@
            
         </div>
         <div class="regform"><h1>Plan your trip here</h1></div>
-        <div class="name">
+        <div class="main">
             <form>
                 <div id="name">
                     <h2 class="name">Name</h2>
