--- a/home/index/Travel Plan/plan.html
+++ b/home/index/Travel Plan/plan.html
@@ -43,7 +43,7 @@
                 <input class="code" type="text" name="area_code">
                 <label class="area-code">Area Code</label>
 
-                <input class="number" type="number" name="number">
+                <input class="name" type="number" name="number">
                 <label class="phone-number">Contact number</label>
 
 
