--- a/home/index/Travel Plan/plan.html
+++ b/home/index/Travel Plan/plan.html
@@ -37,14 +37,14 @@
 
                 </div>
                 <h2 class="name">Email address</h2>
-                <input class="email address" type="Email" name="email adress">
+                <input class="email" type="Email" name="email adress">
 
-                <h2 class="name">Contact number</h2>
+                <h2 class="name">Phone</h2>
                 <input class="code" type="text" name="area_code">
                 <label class="area-code">Area Code</label>
 
-                <input class="name" type="number" name="number">
-                <label class="phone-number">Contact number</label>
+                <input class="number" type="text" name="phone">
+                <label class="phone-number">Phone number</label>
 
 
                 <h2 class="name">Days of your trip</h2>
