--- a/home/index/Travel Plan/plan.html
+++ b/home/index/Travel Plan/plan.html
@@ -48,7 +48,7 @@
 
 
                 <h2 class="name">Days of your trip</h2>
-                <input class="days of your trip" type="number" name="days of your trip">
+                <input class="trip-plan" type="number" name="days of your trip">
                 
                 
                 <h2 id="travel agent">Do you want a travel agent?</h2>
