--- a/home/index/Travel Plan/plan.html
+++ b/home/index/Travel Plan/plan.html
@@ -53,11 +53,11 @@
                 
                 <h2 id="customer">Do you want a travel agent?</h2>
 
-                <label class="radio">Yes
+                <label class="radio">Yes i want
                     <input type="radio" checked="checked" name="radio">
                     <span class="checkmark"></span>
                   </label>
-                  <label class="radio">No
+                  <label class="radio">No i wouldn't
                     <input type="radio" name="radio">
                     <span class="checkmark"></span>
                   </label>
