--- a/home/Explore/test 1.html
+++ b/home/Explore/test 1.html
@@ -34,7 +34,7 @@
         </div>
     	</a>
     	
-    	
+    	<a href="Catgry/categories/OffRoad/table.html">
         <div class="card">
             <div class="card-image2"></div>
             <div class="card-text">
@@ -57,6 +57,7 @@
                 </div>
             </div>
         </div>
+    </a>
     </a>
         <a href="Catgry/categories/tours/table.html">
         <div class="card">
@@ -185,11 +186,12 @@
         </div>
     </div>
 </a>
+<a href="Catgry/categories/WildlifeAndParks/table.html">
     <div class="card">
-        <div class="card-image3"></div>
+        <div class="card-image8"></div>
         <div class="card-text">
             <span class="date"></span>
-            <h2>Rawing And Water Rafting</h2>
+            <h2>Parks</h2>
             <p>Rafting and white water rafting are recreational outdoor activities which use an inflatable raft to navigate a river or other body of water.</p>
         </div>
         <div class="card-stats">
@@ -207,11 +209,12 @@
             </div>
         </div>
     </div>
+</a>
     <div class="card">
-        <div class="card-image4"></div>
+        <div class="card-image9"></div>
         <div class="card-text">
             <span class="date"></span>
-            <h2>Rocks And Hike</h2>
+            <h2>Shopping Tours</h2>
             <p>Hiking is a long, vigorous walk, usually on trails or footpaths in the countryside.</p>
         </div>
         <div class="card-stats">
@@ -233,8 +236,8 @@
         <div class="card-image5"></div>
         <div class="card-text">
             <span class="date"></span>
-            <h2>Ancient Cities</h2>
-            <p>Anuradhapura is one of the ancient cities in Sri Lanka, well known for its ruins depicting early Sri Lankan civilization. It is very famous among Buddhists pilgrims.</p>
+            <h2>More</h2>
+            <!--p>Anuradhapura is one of the ancient cities in Sri Lanka, well known for its ruins depicting early Sri Lankan civilization. It is very famous among Buddhists pilgrims.</p>
         </div>
         <div class="card-stats">
             <div class="stat">
@@ -249,7 +252,7 @@
                 <div class="value">32</div>
                 <div class="type">comments</div>
             </div>
-        </div>
+        </div-->
     </div>
 </div>
 
