--- a/home/Explore/test 1.html
+++ b/home/Explore/test 1.html
@@ -210,6 +210,8 @@
         </div>
     </div>
 </a>
+
+<a href="Catgry/categories/shopingAndFashion/table.html">
     <div class="card">
         <div class="card-image9"></div>
         <div class="card-text">
@@ -232,6 +234,7 @@
             </div>
         </div>
     </div>
+</a>
     <div class="card">
         <div class="card-image5"></div>
         <div class="card-text">
