--- a/home/Explore/test 1.html
+++ b/home/Explore/test 1.html
@@ -236,7 +236,7 @@
     </div>
 </a>
     <div class="card">
-        <div class="card-image5"></div>
+        <div ><!--class="card-image5"--></div>
         <div class="card-text">
             <span class="date"></span>
             <h2>More</h2>
