--- a/home/index/agent/add-category.html
+++ b/home/index/agent/add-category.html
@@ -111,12 +111,15 @@
                                 </nav>
                             </div>
 
-                            <a class="nav-link" href="categories.html" ><div class="nav-link-icon"><i data-feather="chevrons-up"></i></div>
+                            <!--a class="nav-link" href="categories.html" ><div class="nav-link-icon"><i data-feather="chevrons-up"></i></div>
                                 Categories
                             </a>
 
                             <a class="nav-link" href="pages.html" ><div class="nav-link-icon"><i data-feather="book-open"></i></div>
                                 Pages
+                            </a-->
+                              <a class="nav-link" href="users.html" ><div class="nav-link-icon"><i data-feather="users"></i></div>
+                                Travellers<!--change users as Travellers-->
                             </a>
 
                             <a class="nav-link" href="comments.html" ><div class="nav-link-icon"><i data-feather="package"></i></div>
