--- a/home/index/agent/index.html
+++ b/home/index/agent/index.html
@@ -146,16 +146,16 @@
                                 </nav>
                             </div>
 
-                            <a class="nav-link" href="categories.html" ><div class="nav-link-icon"><i data-feather="chevrons-up"></i></div>
+                            <!--a class="nav-link" href="categories.html" ><div class="nav-link-icon"><i data-feather="chevrons-up"></i></div>
                                 Categories
                             </a>
 
                             <a class="nav-link" href="pages.html" ><div class="nav-link-icon"><i data-feather="book-open"></i></div>
                                 Pages
-                            </a>
+                            </a-->
 
                             <a class="nav-link" href="users.html" ><div class="nav-link-icon"><i data-feather="users"></i></div>
-                                Users
+                                Travellers<!--change users as Travellers-->
                             </a>
 
                             <a class="nav-link" href="comments.html" ><div class="nav-link-icon"><i data-feather="package"></i></div>
@@ -228,7 +228,7 @@
                         <div class="col-xl-3 col-md-6">
                             <div class="card bg-success text-white mb-4">
                                 <div class="card-body d-flex align-items-center justify-content-between">
-                                    <p>Categories</p>
+                                    <p>Travellers</p>
                                     <p>32</p>
                                 </div>
                                 <div class="card-footer d-flex align-items-center justify-content-between">
