--- a/home/index/agent/users.html
+++ b/home/index/agent/users.html
@@ -111,12 +111,15 @@
                                 </nav>
                             </div>
 
-                            <a class="nav-link" href="categories.html" ><div class="nav-link-icon"><i data-feather="chevrons-up"></i></div>
+                            <!--a class="nav-link" href="categories.html" ><div class="nav-link-icon"><i data-feather="chevrons-up"></i></div>
                                 Categories
                             </a>
 
                             <a class="nav-link" href="pages.html" ><div class="nav-link-icon"><i data-feather="book-open"></i></div>
                                 Pages
+                            </a-->
+                            <a class="nav-link" href="users.html" ><div class="nav-link-icon"><i data-feather="users"></i></div>
+                                Travellers<!--change users as Travellers-->
                             </a>
 
                             <a class="nav-link" href="comments.html" ><div class="nav-link-icon"><i data-feather="package"></i></div>
@@ -151,7 +154,7 @@
                             <div class="page-header-content d-flex align-items-center justify-content-between text-white">
                                 <h1 class="page-header-title">
                                     <div class="page-header-icon"><i data-feather="users"></i></div>
-                                    <span>All Users</span>
+                                    <span>All Travellers</span>
                                 </h1>
                                 <a href="new-user.html" title="Add new category" class="btn btn-white">
                                     <div class="page-header-icon"><i data-feather="plus"></i></div>
