--- a/top agent/card.html
+++ b/top agent/card.html
@@ -25,6 +25,20 @@
       </div>
       <button class="btn">Contact</button>
     </div>
+
+    <div class="card">
+      <img src="lady1.jpeg" alt="lady" />
+      <h1>Mark Berg</h1>
+      <p class="title">Software engineer</p>
+      <p class="title">UI/UX Developer</p>
+      <div class="social-media">
+        <a href="#"><i class="fab fa-facebook-f"></i></i></a>
+        <a href="#"><i class="fab fa-pinterest-p"></i></i></a>
+        <a href="#"><i class='fab fa-twitter'></i></i></a>
+        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+      </div>
+      <button class="btn">Contact</button>
+    </div>
     
   </body>
 </html>
