--- a/top agent/card.html
+++ b/top agent/card.html
@@ -25,9 +25,10 @@
       </div>
       <button class="btn">Contact</button>
     </div>
+    <br>
 
     <div class="card">
-      <img src="lady1.jpeg" alt="lady" />
+      <img src="lady1.jpg" alt="mark" />
       <h1>Mark Berg</h1>
       <p class="title">Software engineer</p>
       <p class="title">UI/UX Developer</p>
@@ -39,6 +40,8 @@
       </div>
       <button class="btn">Contact</button>
     </div>
+
+
     
   </body>
 </html>
