--- a/top agent/card.html
+++ b/top agent/card.html
@@ -28,7 +28,7 @@
     <br>
 
     <div class="card">
-      <img src="lady1.jpg" alt="mark" />
+      <img src="a.jpg" alt="mark" />
       <h1>Mark Berg</h1>
       <p class="title">Software engineer</p>
       <p class="title">UI/UX Developer</p>
