--- a/top agent/top.html
+++ b/top agent/top.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AM Website</title>
+    <title>Top agents</title>
     <!--CUSTOM CSS-->
    
     <!--FONTAWESOME CSS-->
@@ -18,7 +18,9 @@
               <h1 class="heading">Top Agents</h1>
               <div class="card-wrapper">
                   <div class="card">
-                      <img src=
+                      <img src="background 2.jpg" alt="card background" class="card-img">
+                      <img src="logo1.jpg" alt="profile image" class="profile-img">
+                      <h1>Michille Gomes</h1>
                   </div>
               </div>
       </section>
