--- a/home/about us/about/about.html
+++ b/home/about us/about/about.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 	<title>About Us</title>
-	<link rel="stylesheet" href="about/style.css">
+	<link rel="stylesheet" href="C:\xampp\htdocs\CA-web-development-project\home\about us\about\style.css">
 </head>
 <body>
 	<div class="header">
 		<div class="main">
 		<h1>About Us..</h1>
 		<p>
-			gudwgidagiakdbabcjbkcbzkbckzbckduccbscjbbcbucsiucsi<br>gudwgidagiakdbabcjbkcbzkbckzbckduccbscjbbcbucsiucsi<br>gudwgidagiakdbabcjbkcbzkbckzbckduccbscjbbcbucsiucsigudwgidagiakdbabcjbkcbzkbckzbckduccbscjbbcbucsiucsigudwgidagiakdbabcjbkcbzkbckzbckduccbscjbbcbucsiucsigudwgidagiakdbabcjbkcbzkbckzbckduccbscjbbcbucsiucsi
+			gudwgidagiakdbabcjbkcbzkbckzbckduccbscjbbcbucsiucsi<br>gudwgidagiakdbabcjbkcbzkbckzbckduccbscjbbcbucsiucsi<br>gudwgidagiakdbabcjbkcbzkbckzbckduccbscjbbcbucsiucsi<br>gudwgidagiakdbabcjbkcbzkbckzbckduccbscjbbcbucsiucsi<br>gudwgidagiakdbabcjbkcbzkbckzbckduccbscjbbcbucsiucsi<br>gudwgidagiakdbabcjbkcbzkbckzbckduccbscjbbcbucsiucsi
 		</p>
 		<button class="btn">Read More</button>
 		</div>
