--- a/home/about us/contact/contact.html
+++ b/home/about us/contact/contact.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Contact From Design</title>
-	<link rel="stylesheet" type="text/css" href="contact.css/style.css">
+	<link rel="stylesheet" type="text/css" href="C:\xampp\htdocs\CA-web-development-project\home\about us\contact\style.css">
 </head>
 <body>
 	<div class="Contact-title">
