--- a/top agent/top.html
+++ b/top agent/top.html
@@ -21,7 +21,23 @@
                       <img src="background 2.jpg" alt="card background" class="card-img">
                       <img src="logo1.jpg" alt="profile image" class="profile-img">
                       <h1>Michille Gomes</h1>
+                      <p class="job-title">Lead Designer</p>
+                      <p class="about">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                          Esse, officiis obcaecati asperiores voluptas ducimus est. 
+                          Atque nesciunt eveniet commodi natus eos quo, 
+                          veritatis soluta temporibus repudiandae velit sequi, 
+                          porro doloribus.
+                        </p>
+                        <a href="#" class="btn">Contact</a>
+                        <ul class="social media">
+                            <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
+                            <li><a href="#"><i class="fab fa-twitter-square"></i></a></li>
+                            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="#"><i class="fab fa-google-plus-square"></i></a></li>
+                        </ul>
                   </div>
               </div>
+          </div>
       </section>
   </body>
+</html>
