--- a/top agent/top.html
+++ b/top agent/top.html
@@ -29,7 +29,7 @@
                           porro doloribus.
                         </p>
                         <a href="#" class="btn">Contact</a>
-                        <ul class="social media">
+                        <ul class="social-media">
                             <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
                             <li><a href="#"><i class="fab fa-twitter-square"></i></a></li>
                             <li><a href="#"><i class="fab fa-instagram"></i></a></li>
@@ -48,7 +48,7 @@
                         porro doloribus.
                       </p>
                       <a href="#" class="btn">Contact</a>
-                      <ul class="social media">
+                      <ul class="social-media">
                           <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
                           <li><a href="#"><i class="fab fa-twitter-square"></i></a></li>
                           <li><a href="#"><i class="fab fa-instagram"></i></a></li>
@@ -68,7 +68,7 @@
                         porro doloribus.
                       </p>
                       <a href="#" class="btn">Contact</a>
-                      <ul class="social media">
+                      <ul class="social-media">
                           <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
                           <li><a href="#"><i class="fab fa-twitter-square"></i></a></li>
                           <li><a href="#"><i class="fab fa-instagram"></i></a></li>
@@ -87,7 +87,7 @@
                         porro doloribus.
                       </p>
                       <a href="#" class="btn">Contact</a>
-                      <ul class="social media">
+                      <ul class="social-media">
                           <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
                           <li><a href="#"><i class="fab fa-twitter-square"></i></a></li>
                           <li><a href="#"><i class="fab fa-instagram"></i></a></li>
