--- a/home/index/index.html
+++ b/home/index/index.html
@@ -20,7 +20,7 @@
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a href="#" class="navbar-brand">TravelLanka</a>
+            <a href="#" class="navbar-brand">AroundlLanka</a>
             <div class="collapse navbar-collapse" id="Navbar">
                
                 <ul class="navbar-nav mr-auto"> 
@@ -88,7 +88,7 @@
         <div class="container">
             <div class="content opacity">
                 <h3 class="title">
-                    Why TravelLanka?
+                    Why AroundLanka?
                     <!--the border-->
                     <!--div class="border"></div-->
                 </h3>
@@ -114,7 +114,7 @@
     <div class="row divz" >
        <div class="col-md-6 bg-success">
        	<h1 class="display-4 font-weight-bold">Yes</h1> <br>
-       	<a class="btn btn-outline-light btn-lg" href="file:///C:/xampp/htdocs/CA-web-development-project/home/index/Travel%20Plan/plan.html" role="button">Plan Your Trip</a>
+       	<a class="btn btn-light btn-lg" href="file:///C:/xampp/htdocs/CA-web-development-project/home/index/Travel%20Plan/plan.html" role="button">Plan Your Trip</a>
        </div> 
        <div class="col-md-6 border border-success">
        <h1 class="display-4 font-weight-bold" >No</h1>  <br>
