--- a/home/index/index.html
+++ b/home/index/index.html
@@ -103,9 +103,9 @@
             </div>
         </div>
     </section>
-    
-   <div  class="container"> <!--class="jumbotron"-->
-  <h1 class="display-2">Do You know where to go?</h1>
+    <br><br><br>
+   <div  class="container-fluid text-center "> <!--class="jumbotron"-->
+  <h1 class="display-2 text-secondary col-sm-12">Do You know where to go?</h1><br><br>
   <!--p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
   <hr class="my-4">
   <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
@@ -113,11 +113,11 @@
   	<div>
     <div class="row divz" >
        <div class="col-md-6 bg-success">
-       	<h1 class="display-4 font-weight-bold">Yes</h1> <br>
+       	<h1 class="display-4 font-weight-bold text-light">Yes</h1> <br>
        	<a class="btn btn-light btn-lg" href="file:///C:/xampp/htdocs/CA-web-development-project/home/index/Travel%20Plan/plan.html" role="button">Plan Your Trip</a>
        </div> 
-       <div class="col-md-6 border border-success">
-       <h1 class="display-4 font-weight-bold" >No</h1>  <br>
+       <div class="col-md-6 col-sm-12 border border-success">
+       <h1 class="display-4 font-weight-bold text-success" >No</h1>  <br>
    		<a class="btn btn-success btn-lg" href="file:///C:/xampp/htdocs/CA-web-development-project/home/Explore/test%201.html" role="button">Click Explore</a>
    	</div> 
     </div>
