--- a/home/index/index.html
+++ b/home/index/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="includes/node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="includes/style/parallex-style.css">
     <link rel="stylesheet" href="includes/style/index-style.css">
+
     <title>Home</title>
 </head>
 
@@ -161,36 +162,54 @@
             </div>
         </div>
     </div>
+    <h1 class="display-2  col-sm-12 font-weight-bold">Top Trending Destinations</h1>
     <!--slide shaw-->
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img class="d-block w-100" src="imagez/a.jpg" alt="First slide" style="width:100em; height:40em;">
     <div class="carousel-caption d-none d-md-block">
-    <h5>kjdsjdsj</h5>
-    <p>okdl;skd;lsk</p>
+    <h5>Nine Arch Bridge</h5>
+    <p>Ella</p>
   </div>
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="imagez/b.jpg" alt="Second slide" style="width:100em; height:45em;">
    <div class="carousel-caption d-none d-md-block">
-    <h5>okoioskd</h5>
-    <p>..=fd;djdjfjd</p>
+    <h5>Diyaluma falls</h5>
+    <p>Badulla</p>
   </div>
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="imagez/c.jpg" alt="Third slide"  style="width:100em; height:40em;">
      <div class="carousel-caption d-none d-md-block">
-    <h5>kjdsjdsj</h5>
-    <p>okdl;skd;lsk</p>
+    <h5>Temple of the Sacred Tooth Relic</h5>
+    <p>Kandy</p>
   </div>   
     </div>
   </div>
+
+      <!--div class="carousel-item">
+      <img class="d-block w-100" src="imagez/d.jpg" alt="Fourth slide" style="width:100em; height:45em;">
+   <div class="carousel-caption d-none d-md-block">
+    <h5>okoioskd</h5>
+    <p>..=fd;djdjfjd</p>
+  </div>
+    </div>
+
+        <div class="carousel-item">
+      <img class="d-block w-100" src="imagez/e.jpg" alt="Fifth slide" style="width:100em; height:45em;">
+   <div class="carousel-caption d-none d-md-block">
+    <h5>okoioskd</h5>
+    <p>..=fd;djdjfjd</p>
+  </div>
+    </div-->
 
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -212,23 +231,25 @@
                 <div class="col-4 offset-1 col-sm-2">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="aboutus.html">About</a></li>
-                        <li><a href="#">Menu</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="file:///C:/xampp/htdocs/CA-web-development-project/home/index/index.html#">Home</a></li>
+                        <li><a href="file:///C:/xampp/htdocs/CA-web-development-project/home/about%20us/about/about.html">About</a></li>
+                        <li><a href="file:///C:/xampp/htdocs/CA-web-development-project/home/Explore/test%201.html">Attraction</a></li>
+                        <li><a href="file:///C:/xampp/htdocs/CA-web-development-project/home/index/User.html">Menu</a></li>
+                        <!--li><a href="#">Contact</a></li-->
                     </ul>
                 </div>
                 <div class="col-7 col-sm-5">
-                    <h5>Our Address</h5>
+                    <h5>Contact Us</h5>
                     <address>
-                      121, Clear Water Bay Road<br>
+                     <!-- 121, Clear Water Bay Road<br>
                       Clear Water Bay, Kowloon<br>
-                      HONG KONG<br>
+                      HONG KONG<br> -->
                       Tel.: +852 1234 5678<br>
                       Fax: +852 8765 4321<br>
-                      Email: <a href="mailto:confusion@food.net">confusion@food.net</a>
+                      Email: <a href="mailto:confusion@food.net">aroundlanka@info.com</a>
                    </address>
                 </div>
+
                 <div class="col-12 col-sm-4 align-self-center">
                     <div class="text-center">
                         <a href="http://google.com/+">Google+</a>
@@ -240,9 +261,9 @@
                     </div>
                 </div>
            </div>
-           <div class="row justify-content-center">             
+           <div class="row justify-content-center ">             
                 <div class="col-auto">
-                    <p>© Copyright 2018 Ristorante Con Fusion</p>
+                    <p>© Copyright 2020 Log D</p>
                 </div>
            </div>
         </div>
