--- a/home/index/index.html
+++ b/home/index/index.html
@@ -220,9 +220,18 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
-
+<div class="container">
+    <div class="row">
+       <div class="col-md-6">
+         <h1 class="display-2  col-sm-12 font-weight-bold">Choose Place You Like</h1>
+       </div> 
+       <div class="col-md-6">
+         <iframe src="https://www.google.com/maps/d/embed?mid=17WqQPF-grsLrI2q3rxfy0RuQTOnG6R7L" width="400" height="500" class="map"></iframe>
+       </div> 
+    </div>
+  </div>
 <center>
-<iframe src="https://www.google.com/maps/d/embed?mid=17WqQPF-grsLrI2q3rxfy0RuQTOnG6R7L" width="400" height="500" class="map"></iframe>
+
 </center>
    <!--footer --->
     <footer class="footer">
