--- a/home/index/index.html
+++ b/home/index/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="includes/node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="includes/style/parallex-style.css">
     <link rel="stylesheet" href="includes/style/index-style.css">
-
     <title>Home</title>
 </head>
 
@@ -162,54 +161,36 @@
             </div>
         </div>
     </div>
-    <h1 class="display-2  col-sm-12 font-weight-bold">Top Trending Destinations</h1>
     <!--slide shaw-->
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img class="d-block w-100" src="imagez/a.jpg" alt="First slide" style="width:100em; height:40em;">
     <div class="carousel-caption d-none d-md-block">
-    <h5>Nine Arch Bridge</h5>
-    <p>Ella</p>
+    <h5>kjdsjdsj</h5>
+    <p>okdl;skd;lsk</p>
   </div>
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="imagez/b.jpg" alt="Second slide" style="width:100em; height:45em;">
    <div class="carousel-caption d-none d-md-block">
-    <h5>Diyaluma falls</h5>
-    <p>Badulla</p>
+    <h5>okoioskd</h5>
+    <p>..=fd;djdjfjd</p>
   </div>
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="imagez/c.jpg" alt="Third slide"  style="width:100em; height:40em;">
      <div class="carousel-caption d-none d-md-block">
-    <h5>Temple of the Sacred Tooth Relic</h5>
-    <p>Kandy</p>
+    <h5>kjdsjdsj</h5>
+    <p>okdl;skd;lsk</p>
   </div>   
     </div>
   </div>
-
-      <!--div class="carousel-item">
-      <img class="d-block w-100" src="imagez/d.jpg" alt="Fourth slide" style="width:100em; height:45em;">
-   <div class="carousel-caption d-none d-md-block">
-    <h5>okoioskd</h5>
-    <p>..=fd;djdjfjd</p>
-  </div>
-    </div>
-
-        <div class="carousel-item">
-      <img class="d-block w-100" src="imagez/e.jpg" alt="Fifth slide" style="width:100em; height:45em;">
-   <div class="carousel-caption d-none d-md-block">
-    <h5>okoioskd</h5>
-    <p>..=fd;djdjfjd</p>
-  </div>
-    </div-->
 
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -220,18 +201,9 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
-<div class="container">
-    <div class="row">
-       <div class="col-md-6">
-         <h1 class="display-2  col-sm-12 font-weight-bold">Choose Place You Like</h1>
-       </div> 
-       <div class="col-md-6">
-         <iframe src="https://www.google.com/maps/d/embed?mid=17WqQPF-grsLrI2q3rxfy0RuQTOnG6R7L" width="400" height="500" class="map"></iframe>
-       </div> 
-    </div>
-  </div>
-<center>
 
+<center>
+<iframe src="https://www.google.com/maps/d/embed?mid=17WqQPF-grsLrI2q3rxfy0RuQTOnG6R7L" width="400" height="500" class="map"></iframe>
 </center>
    <!--footer --->
     <footer class="footer">
@@ -240,25 +212,23 @@
                 <div class="col-4 offset-1 col-sm-2">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="file:///C:/xampp/htdocs/CA-web-development-project/home/index/index.html#">Home</a></li>
-                        <li><a href="file:///C:/xampp/htdocs/CA-web-development-project/home/about%20us/about/about.html">About</a></li>
-                        <li><a href="file:///C:/xampp/htdocs/CA-web-development-project/home/Explore/test%201.html">Attraction</a></li>
-                        <li><a href="file:///C:/xampp/htdocs/CA-web-development-project/home/index/User.html">Menu</a></li>
-                        <!--li><a href="#">Contact</a></li-->
+                        <li><a href="#">Home</a></li>
+                        <li><a href="aboutus.html">About</a></li>
+                        <li><a href="#">Menu</a></li>
+                        <li><a href="#">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-7 col-sm-5">
-                    <h5>Contact Us</h5>
+                    <h5>Our Address</h5>
                     <address>
-                     <!-- 121, Clear Water Bay Road<br>
+                      121, Clear Water Bay Road<br>
                       Clear Water Bay, Kowloon<br>
-                      HONG KONG<br> -->
+                      HONG KONG<br>
                       Tel.: +852 1234 5678<br>
                       Fax: +852 8765 4321<br>
-                      Email: <a href="mailto:confusion@food.net">aroundlanka@info.com</a>
+                      Email: <a href="mailto:confusion@food.net">confusion@food.net</a>
                    </address>
                 </div>
-
                 <div class="col-12 col-sm-4 align-self-center">
                     <div class="text-center">
                         <a href="http://google.com/+">Google+</a>
@@ -270,13 +240,15 @@
                     </div>
                 </div>
            </div>
-           <div class="row justify-content-center ">             
-                <div class="col-auto">
-                    <p>© Copyright 2020 Log D</p>
-                </div>
-           </div>
+           
         </div>
+
     </footer>
+            <div class="row justify-content-center bg-dark">             
+            <div class="col-auto text-secondary">
+                <p>© Copyright 2018 Ristorante Con Fusion</p>
+            </div>
+       </div>
   <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
   <script src="includes/node_modules/jquery/dist/jquery.slim.min.js"></script>
   <script src="includes/node_modules/popper.js/dist/umd/popper.min.js"></script>
