--- a/home/index/index.html
+++ b/home/index/index.html
@@ -162,6 +162,7 @@
         </div>
     </div>
     <!--slide shaw-->
+      <h1 class="display-2 text-secondary col-sm-12 font-weight-bold">Top Trending Destinations</h1>
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -201,10 +202,17 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
+<div class="container">
+    <div class="row">
+       <div class="col-md-6">
+           <h1 class="display-2  col-sm-12 font-weight-bold">Choose Place you like</h1>
+       </div> 
+       <div class="col-md-6">
+         <iframe src="https://www.google.com/maps/d/embed?mid=17WqQPF-grsLrI2q3rxfy0RuQTOnG6R7L" width="400" height="500" class="map"></iframe>
+       </div> 
+    </div>   
+  </div>
 
-<center>
-<iframe src="https://www.google.com/maps/d/embed?mid=17WqQPF-grsLrI2q3rxfy0RuQTOnG6R7L" width="400" height="500" class="map"></iframe>
-</center>
    <!--footer --->
     <footer class="footer">
         <div class="container">
