--- a/home/index/index.html
+++ b/home/index/index.html
@@ -240,15 +240,13 @@
                     </div>
                 </div>
            </div>
-           
+           <div class="row justify-content-center">             
+                <div class="col-auto">
+                    <p>© Copyright 2018 Ristorante Con Fusion</p>
+                </div>
+           </div>
         </div>
-
     </footer>
-            <div class="row justify-content-center bg-dark">             
-            <div class="col-auto text-secondary">
-                <p>© Copyright 2018 Ristorante Con Fusion</p>
-            </div>
-       </div>
   <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
   <script src="includes/node_modules/jquery/dist/jquery.slim.min.js"></script>
   <script src="includes/node_modules/popper.js/dist/umd/popper.min.js"></script>
