--- a/home/index/agent/add-new.html
+++ b/home/index/agent/add-new.html
@@ -170,7 +170,7 @@
                                         <label for="post-title">Post Title:</label>
                                         <input class="form-control" id="post-title" type="text" placeholder="Post title ..." />
                                     </div>
-                                    <div class="form-group">
+                                    <!--div class="form-group">
                                         <label for="post-status">Post Status:</label>
                                         <select class="form-control" id="post-status">
                                             <option>Published</option>
@@ -184,7 +184,7 @@
                                             <option>Coding</option>
                                             <option>Lifestyle</option>
                                         </select>
-                                    </div>
+                                    </div-->
                                     <div class="form-group">
                                         <label for="post-title">Choose photo:</label>
                                         <input class="form-control" id="post-title" type="file" />
