--- a/home/index/index.html
+++ b/home/index/index.html
@@ -169,27 +169,35 @@
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
   </ol>
+  <a href="file:///C:/xampp/htdocs/CA-web-development-project/home/Explore/Catgry/categories/Hikes/ella/template.html">
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img class="d-block w-100" src="imagez/a.jpg" alt="First slide" style="width:100em; height:40em;">
     <div class="carousel-caption d-none d-md-block">
-    <h5>kjdsjdsj</h5>
-    <p>okdl;skd;lsk</p>
+    <h5>Nine Arch Bridge</h5>
+    <p>Ella</p>
   </div>
+</a>
     </div>
+
+    <a href="file:///C:/xampp/htdocs/CA-web-development-project/home/Explore/Catgry/categories/waterfalls/diyaluma/template.html">
     <div class="carousel-item">
       <img class="d-block w-100" src="imagez/b.jpg" alt="Second slide" style="width:100em; height:45em;">
    <div class="carousel-caption d-none d-md-block">
-    <h5>okoioskd</h5>
-    <p>..=fd;djdjfjd</p>
+    <h5>Diyaluma Falls</h5>
+    <p>Badulla</p>
   </div>
+  </a>
     </div>
+
+<a href="file:///C:/xampp/htdocs/CA-web-development-project/home/Explore/Catgry/categories/Anciant%20Cites/kandy/template.html">
     <div class="carousel-item">
       <img class="d-block w-100" src="imagez/c.jpg" alt="Third slide"  style="width:100em; height:40em;">
      <div class="carousel-caption d-none d-md-block">
-    <h5>kjdsjdsj</h5>
-    <p>okdl;skd;lsk</p>
-  </div>   
+    <h5>Temple of the Sacred Tooth Relic</h5>
+    <p>Kandy</p>
+  </div> 
+  </a>  
     </div>
   </div>
 
