--- a/home/index/index.html
+++ b/home/index/index.html
@@ -220,7 +220,28 @@
        </div> 
     </div>   
   </div>
-
+  <div class="container">
+    <div class="row" id="imagex" style="background: yellow">
+       <div class="col-sm-2">
+         <img src="imagez\boat.png" id="imagex">
+       </div> 
+       <div class="col-sm-2">
+          <img src="imagez\boat.png" id="imagex">
+       </div> 
+     <div class="col-sm-2">
+        <img src="imagez\boat.png" id="imagex">
+     </div> 
+       <div class="col-sm-2">
+          <img src="imagez\boat.png" id="imagex">
+       </div> 
+        <div class="col-sm-2">
+           <img src="imagez\boat.png" id="imagex">
+        </div> 
+       <div class="col-sm-2">
+           <img src="imagez\boat.png" id="imagex">
+        </div> 
+    </div>  
+  </div>
    <!--footer --->
     <footer class="footer">
         <div class="container">
