--- a/home/index/index.html
+++ b/home/index/index.html
@@ -67,9 +67,21 @@
                         <div class="modal-content">
                           <span class="close">&times;</span>
                           <div class="container">
-                          <div class="row" style="background: lightblue">
-                             <div class="col-md-6">col-sm-6</div> 
-                             <div class="col-md-6">col-sm-6</div> 
+                          <div class="row text-success ">
+                             <div class="col-md-6 border border-success logc">
+                             	<h1 class="display-4 font-weight-bold ">Are you a traveller?</h1> 
+                             	<h3>paragraph </h3>
+                             	<div class="logx">
+                             	<a href="register/login.php"><center><h4 class="bg-success text-white">Login</h4></center></a>
+                             	</div>
+                             </div> 
+                             <div class="col-md-6 border border-success logc ">
+                             		<h1 class="display-4 font-weight-bold ">Are you a Guid?</h1> 
+                             			<h3>paragraph </h3>
+                             			<div class="logx">
+                             			<a href="register/login.php"><center><h4 class="bg-success text-white">Login</h4></center></a>
+                             			</div>
+                             </div> 
                           </div>  
                           </div>
                         </div>
