--- a/home/index/index.html
+++ b/home/index/index.html
@@ -59,13 +59,13 @@
                     <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
                   </form>
 
-  					 <li class="nav-item active nav-link"><!--a href="register/login.php" -->Login<!---/a-->
+  					 <li class="nav-item active nav-link loging" id="myBtn"><!--a href="register/login.php" -->Login<!---/a-->
   					 <!-- The Modal -->
 	                      <div id="myModal" class="modal">
 
                         <!-- Modal content -->
                         <div class="modal-content">
-                          <span class="close">&times;</span>
+                          <span class="close"></span>
                           <div class="container">
                           <div class="row text-success ">
                              <div class="col-md-6 border border-success logc">
@@ -87,7 +87,7 @@
                         </div>
                     </li>
                     <!-- Trigger/Open The Modal -->
-					<li><button id="myBtn">Open Modal</button></li>
+					<!--li><button id="myBtn">Open Modal</button></li-->
                     <li class="nav-item"><a href="register/register.php" class="nav-link">Signup</a></li>
                   </ul>
             </div>
