login color update

--- a/home/index/index.html
+++ b/home/index/index.html
@@ -67,19 +67,19 @@
                         <div class="modal-content">
                           <span class="close"></span>
                           <div class="container">
-                          <div class="row text-success ">
-                             <div class="col-md-6 border border-success logc">
+                          <div class="row ">
+                             <div class="col-md-6 border border-success logc text-success ">
                              	<h1 class="display-4 font-weight-bold ">Are you a traveller?</h1> 
                              	<h3>paragraph </h3>
-                             	<div class="logx">
+                             	<div class="bg-success logx">
                              	<a href="register/login.php"><center><h4 class="bg-success text-white">Login</h4></center></a>
                              	</div>
                              </div> 
-                             <div class="col-md-6 border border-success logc ">
+                             <div class="col-md-6 border border-dark logc text-dark">
                              		<h1 class="display-4 font-weight-bold ">Are you a Guid?</h1> 
                              			<h3>paragraph </h3>
-                             			<div class="logx">
-                             			<a href="register/login.php"><center><h4 class="bg-success text-white">Login</h4></center></a>
+                             			<div class="bg-dark logx">
+                             			<a href="register/login.php"><center><h4 class="text-white">Login</h4></center></a>
                              			</div>
                              </div> 
                           </div>  
